data/derived/comb/progs/unify/prog7367.ml.out
Characters 202-203:
  let (_, res) = List.fold_left f base args in
                                ^
Error: This expression has type
         int list -> int list * int list -> int list * int list
       but an expression was expected of type
         int list -> int list * int list -> int list
       Type int list * int list is not compatible with type int list 
